# webdav_backup

./: .gitignore  README.md  config.example.json
.github/workflows/: release.yml
rust/: Cargo.toml  config.example.json
rust/src/: config.rs  logger.rs  main.rs  retention.rs
rust/src/backup/: file.rs  mod.rs  mysql.rs  pgsql.rs  sqlite.rs
rust/src/webdav/: auth.rs  mod.rs
