[package]
name = "webdav-backup"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "webdav-backup"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "stream"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.128"
zip = { version = "2", features = ["aes-crypto", "deflate-zlib"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dotenvy = "0.15"
globset = "0.4"
walkdir = "2"
url = "2"
thiserror = "1"
anyhow = "1"
tempfile = "3"
md-5 = "0.10"
hex = "0.4"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
